--- a/auth/package.json
+++ b/auth/package.json
@@ -4,22 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --poll src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@labcourseapp/common": "^1.0.2",
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8"
   }
 }
