--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16.14.0-alpine
 
 WORKDIR /app
 COPY package.json .
-RUN npm install --only=prod
+RUN npm install
 COPY . .
 
 CMD ["npm", "start"]
