--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,17 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.25.0",
+    "formik": "^2.2.9",
+    "mobx": "^6.3.13",
+    "mobx-react-lite": "^3.2.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
+    "semantic-ui-react": "^2.0.1",
+    "semantic-ui-css": "^2.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
