event bus implementation

--- a/infrastructure/k8s/auth-depl.yaml
+++ b/infrastructure/k8s/auth-depl.yaml
@@ -16,6 +16,14 @@ spec:
         - name: auth
           image: erjonjanuzi/auth
           env:
+            - name: NATS_CLIENT_ID
+              valueFrom: 
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: labcourseapp
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
             - name: JWT_KEY
