--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -24,6 +24,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: erjonjanuzi/products
+      context: products
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: erjonjanuzi/client
       context: client
       docker:
