--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,11 +32,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: erjonjanuzi/client
-      context: client
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: '**/*.ts'
-            dest: . 
+    # - image: erjonjanuzi/client
+    #   context: client
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: '**/*.ts'
+    #         dest: . 
