--- a/infrastructure/k8s/ingress-srv.yaml
+++ b/infrastructure/k8s/ingress-srv.yaml
@@ -31,6 +31,13 @@ spec:
                 name: products-srv
                 port:
                   number: 3000
+          - path: /api/cart/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: cart-srv
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
