--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,6 +32,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: erjonjanuzi/cart
+      context: cart
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     # - image: erjonjanuzi/client
     #   context: client
     #   docker:
