--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
-    "semantic-ui-react": "^2.0.1",
     "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
