--- a/products/package.json
+++ b/products/package.json
@@ -22,6 +22,7 @@
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "cloudinary": "^1.28.1",
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
@@ -29,11 +30,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "mongoose-update-if-current": "^1.4.0",
+    "multer": "^1.4.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.7",
     "mongodb-memory-server": "^8.1.0",
