--- a/infrastructure/k8s/ingress-srv.yaml
+++ b/infrastructure/k8s/ingress-srv.yaml
@@ -38,6 +38,13 @@ spec:
                 name: cart-srv
                 port:
                   number: 3000
+          - path: /api/orders/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: orders-srv
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
