--- a/users/package.json
+++ b/users/package.json
@@ -21,7 +21,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "mongoose-update-if-current": "^1.4.0",
+    "nodemailer": "^6.7.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.4"
   }
 }
