--- a/users/package.json
+++ b/users/package.json
@@ -22,10 +22,13 @@
     "mongoose": "^6.2.1",
     "mongoose-update-if-current": "^1.4.0",
     "nodemailer": "^6.7.3",
+    "randomstring": "^1.2.2",
+    "redis": "^4.0.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.4"
+    "@types/nodemailer": "^6.4.4",
+    "@types/randomstring": "^1.1.8"
   }
 }
