--- a/infrastructure/k8s/users-depl.yaml
+++ b/infrastructure/k8s/users-depl.yaml
@@ -26,8 +26,8 @@ spec:
               value: labcourseapp
             - name: MONGO_URI
               value: 'mongodb://users-mongo-srv:27017/users'
-            - name: REDIS_HOST
-              value: users-redis-srv
+            - name: REDIS_URI
+              value: 'redis://users-redis-srv:6379'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
