add SENDER_EMAIL global env var

--- a/infrastructure/k8s/users-depl.yaml
+++ b/infrastructure/k8s/users-depl.yaml
@@ -33,6 +33,8 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: SENDER_EMAIL
+              value: 'erjonjanuzi2018@gmail.com'
 ---
 apiVersion: v1
 kind: Service
